testData/diagnostics/compilation_errors/sema_errors/invalid_enum.nut
// EXPECT_ERROR: "invalid enum"
enum Color { RED, GREEN, BLUE }
let x = Color.YELLOW
